--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.546</version>
+    <version>1.578</version>
   </parent>
 
   <groupId>org.jenkins-ci.plugins</groupId>
@@ -53,18 +53,25 @@
       <name>Frederik Fromm</name>
       <email>frederik.fromm@gmail.com</email>
     </developer>
+    <developer>
+      <id>janbauerdick</id>
+      <name>Jan Bauerdick</name>
+      <email>jan.bauerdick@open-xchange.com</email>
+    </developer>
   </developers>
 
   <scm>
-    <connection>scm:git:https://ffromm@github.com/jenkinsci/build-blocker-plugin.git</connection>
-    <developerConnection>scm:git:https://ffromm@github.com/jenkinsci/build-blocker-plugin.git</developerConnection>
-    <url>https://github.com/jenkinsci/build-blocker-plugin.git</url>
+    <url>https://github.com/janbauerdick/build-blocker-plugin.git</url>
   </scm>
 
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
       <url>http://repo.jenkins-ci.org/public/</url>
+    </repository>
+    <repository>
+      <id>mirrors.jenkins-ci.org/</id>
+      <url>http://mirrors.jenkins-ci.org/plugins//</url>
     </repository>
   </repositories>
 
@@ -87,5 +94,13 @@
     <compileTarget>1.6</compileTarget>
     <maven.version>3.0.4</maven.version>
   </properties>
+  
+  <dependencies>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>matrix-project</artifactId>
+      <version>1.0-beta-1</version>
+    </dependency>
+  </dependencies>
 
 </project>
